# SimpleParticleSystem

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: sprite.frag  sprite.vert
libs/gl3w/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
src/: Application.cpp  Application.h  main.cpp
src/EngineCore/Core/: AssetManager.cpp  AssetManager.h  Core.h
src/EngineCore/FileLoaders/: RawImage.cpp  RawImage.h
src/EngineCore/Rendering/: BatchRecorder.cpp  BatchRecorder.h  BatchRenderer.cpp  BatchRenderer.h  Material.h  Sprite.h
src/EngineCore/Rendering/OpenGLWrapper/: BufferGPU.cpp  BufferGPU.h  DebugGL.cpp  DebugGL.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VAO.cpp
src/EngineCore/Systems/: ParticleSystem.cpp  ParticleSystem.h  SystemBase.h
src/EngineCore/Utils/: FileUtils.cpp  FileUtils.h  Math.cpp  Math.h
